--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,8 +12,8 @@ jobs:
           toolchain: stable
       - uses: actions-rs/cargo@v1
         with:
-            command: test
-            args: --all-features
+          command: test
+          args: --all-features
   clippy:
     runs-on: ubuntu-latest
     if: github.event_name != 'pull_request'
@@ -21,8 +21,20 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions-rs/toolchain@v1
         with:
-            toolchain: stable
+          toolchain: stable
       - uses: actions-rs/cargo@v1
         with:
           command: clippy
-          args: --tests
+          args: --all-features --tests
+  docs:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions-rs/toolchain@v1
+        with:
+          toolchain: nightly
+      - uses: actions-rs/cargo@v1
+        with:
+          toolchain: nightly
+          command: rustdoc
+          args: --all-features -- --cfg doc_cfg
